# supamind

./: .gitignore  README.md  pyproject.toml
.github/: codeql.yml  dependabot.yml
.github/workflows/: ci.yml
database/: schema.sql
src/supamind/: constants.py
src/supamind/tools/: consciousness.py  memory.py
src/tools/: memory.py
tests/: test_consciousness.py
