[project]
name = "supamind"
version = "0.1.0"
description = "The architecture of a mind, not just the content of one"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.1",
    "supabase>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
supamind = "src.server:run"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pylint>=3.0.0",
]

[tool.pylint.main]
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    'relative-beyond-top-level',
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "no-member",                     # supabase query builder uses dynamic methods
    "too-many-arguments",            # MCP tools intentionally have multiple params
    "too-many-positional-arguments", # same
    "redefined-outer-name",          # standard pytest fixture pattern
    "too-many-locals",               # memory_update has many fields by design
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
